kubernetes/z-cluster-0/podinfo/templates/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: podinfo
  namespace: podinfo
spec:
  gateways:
    - podinfo
  hosts:
    - podinfo.zasda.test
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: podinfo
            port:
              number: 9898
